Update: thêm trang chứa hình ảnh (còn bug chưa có lọc ảnh theo category), chỉnh component header và footer

--- a/src/pages/Products/ProductPage.css
+++ b/src/pages/Products/ProductPage.css
@@ -399,8 +399,12 @@ body {
   transform: scale(1.1);
 }
 
-.modal-body {
-  padding: 2rem;
+.modal-body > div {
+  scroll-snap-type: x mandatory;
+}
+
+.modal-body > div img {
+  scroll-snap-align: center;
 }
 
 .modal-title {
